# aemonge

./: .directory  .gitignore  .gitmodules  .luacheckrc  .luarc.json  .zsh_abbrs  CNAME  README.md  brew.install.sh  build.sh  cheatsheet.md  index.html  install-base.sh  install.sh  python-tech-lead_andres-monge.tex  resume.tex  stylua.toml  tips.md
.githooks/: pre-push
.opencode/: worktree-session-state.json
ML/CNN - Landmarks/: thrust_pair.py
app-configs/: .env  .sgptrc  konsole.profile  userChrome_customization.css
app-configs/chrome/: userChrome.css
app-configs/glow/: solarized.json
app-configs/var-app-com.github.wwmm.pulseeffects-config-PulseEffects-output/: Loudness Equalizer.json
chrome/: userChrome.css
configs/: .eslintrc.json  .gitconfig  .pylintrc  com.flameshot.flameshot.plist  pyrightconfig.json
configs/applications/: .env  com.flameshot.flameshot.plist
configs/bash/: .aliases  .gitconfig  .zshrc
configs/dev-tools/: .editorconfig  .prettierrc
configs/directories/: usr.directory
configs/dirs-icons/: customizations.directory  desktop.directory  documents.directory  downloads.directory  ebooks.directory  games.directory  images.directory  media.directory  opt.directory  public.directory  stash.directory  usr.directory
configs/dot-config/: .konsolerc  .mimeapps.list  kmail2rc  libinput-gestures.conf  yakuakerc
configs/dot-files/: .npmrc
configs/local-configs/: kmail2rc
configs/saved-configs/: .env  vimium-options.json
configs/system/: ath11k-suspend.service  deck-workstation.arandr.sh  etc_sudoers  mkinitcpio.conf  pcloud-sync.service  updater.service  updater.timer
configs/unlinked/: .env  arandr.sh  com.flameshot.flameshot.plist  jupyter_console_config.py  konsole-big.profile  konsole.profile  vimium-options.json  wizard-tokenizer.json
dev-configs/: .editorconfig  .flake8  .prettierrc  .pylintrc  bin  env-configs  pyproject.toml  pyrightconfig.json
docs/: .quartoignore  _quarto.yml  articles.css  articles_home.html  articles_navigation.json  articles_template.html  articles_template.html.tmpl  build.sh  cheatsheet.md  home.html  index.html  index.html.tmpl  loading.script.py  pyproject.toml  resume.tex
docs/articles/: index.html
docs/articles/databases/sql/: file_io.html
docs/articles/devops/git/: cheatsheet.html  maintenance.html
docs/articles/devops/pipelines/: canary-carousel.html
docs/articles/elixir/basics/: tips.html
docs/articles/features/: annotations_performance.html  types_and_build_performace__mojo.html
docs/articles/funtools/: partial.html
docs/articles/libs/bootstrap/: bootstrap-96bf5cd1a68f98d1f3eb1410f4791caf.min.css
docs/articles/numpy/: downsampling.html
docs/articles/pydantic/: generic_http_responses.html
docs/articles/python/asyncio/: async.html  async_loop_and_gather.html
docs/articles/python/debug/: logging.html
docs/articles/python/dspy/: basic_modules.html  summarization_metrics.html
docs/articles/python/fastapi/: generic_responses.html
docs/articles/python/features/: annotations_performance.html  build_performance.html  types_and_build_performace__mojo.html
docs/articles/python/funtools/: partial.html  unpacking_literals.html
docs/articles/python/numpy/: downsampling.html
docs/articles/python/packaging/: tools.html
docs/articles/python/performance/: annotations.html  build.html  concurrency.html  timeit.html
docs/articles/python/pydantic/: generic_http_responses.html
docs/articles/python/types/: casting.html  dataclass.html  diamond_issue.html  down-cast.html  downcast.html  init_and_diamond.html  literals_and_list_unpacking.html
docs/articles/python/unittest/: mock_name_attr.html  mocks_with_name_attr.html
docs/articles/quarto/render/: colorfull-output.html
docs/articles/rust/basics/: borrowing-and-lifetimes.html  generics-trait-bounds-slices-asref.html  mutability-and-references.html
docs/articles/rust/functional/: iterator-laziness-consumption-fold-collect.html  iterator-order-enumerate-rev.html  option-result-question-mark-blocks-closures.html
docs/articles/types/: dataclass.html  downcast.html  init_and_diamond.html  literals_and_list_unpacking.html
docs/articles/unittest/: mocks_with_name_attr.html
docs/articles/unix/network/: networkless_commands.html
docs/assets/: ansi_up.esm  ansi_up.esm.js  burger_responsive_menu.css  close-burger.js  code-console-overrides.css  iframe-hash-sync.js  index.js  style.css
docs/resume/: README.keynotes.md
dotFiles/: .aliases
env-configs/: .Xmodmap  .aliases  .condarc  .gitconfig  .inputrc  .p10k.zsh  .profile.before-nvim  .xinitrc  .zshrc  arch-pacman-packages.txt  configure_displays.sh  etc_udev_rules.d_95-monitor-hotplug.rules  font.sh  pacman.sh  pikaur.conf  pydev.pip.sh  terminalrc
lvim/: init.config.lua  install.sh
lvim/settings/: code-actions.config.lua  code-analysis.config.lua  code-completion.config.lua  code-debug.config.lua  code-history.config.lua  experimental.config.lua  frameworks.config.lua  general.config.lua  lunar-vim-config-docs.lua  mini-plugins.config.lua  navigation.config.lua  terminal.config.lua  theme.config.lua  third-party.config.lua  visual-aids.config.lua
nvim/: cheatsheet.txt  coc-settings.json  filetype.vim  init.lua  lazy-lock.json
nvim/lua/: file-types.lua  keep-alive-plugins.lua
nvim/spell/: es.utf-8.add  es.utf-8.add.spl
nvim/syntax/: quarto.vim
os-init/: arch-linux.sh  arch-packages.sh  fonts.sh  pcloud.sh
os-init/configs/: copy-etc-files  is-legion-plugged
py/: .flake8  hg-model-download.py  merge-bin.py  pyproject.toml  starter-pyproject.sh  starter-pyproject.toml
reformat-scripts/: .env  install.sh  pacman.sh  zz-steamos-autologin.conf
sbin/: copy-etc-files  docker-deamon  is-legion-plugged  logicam  lsip  lsport  pcloud-root-sync.sh  profile-bin-load.sh  reboot-to-steam  rsync-root-and-configs.sh  rtx-gpu-compute-only.sh  sync.sh  system-pkgs-updater.sh  update-pau-fwu  update-pau-fwu-znn  updater  updater.sh  usball  xrand-scale-deck
scafolds/: pyproject.toml
scripts/: chatpgt.py  loading.py
show-cases/: navigation.html
www/: index.html
(+297 files in other folders)
