[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "dspy>=2.6.16",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pillow>=11.1.0",
    "pydantic>=2.11.1",
    "rouge-score>=0.1.2",
]
