[tool.poetry]
name = ""
description = ""
version = "0.0.1"
authors = ["aemonge <andres@aemonge.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.hg
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
| foo.py           # also separately exclude a file named foo.py in
                   # the root of the project
)
'''
string-normalization = false

[tool.docformatter]
black = true
recursive = true
tab-width = 4
in-place = true

[tool.autoflake]
check = false
quiet = true
in_place = true
recursive = true
remove_all_unused_imports = true
ignore_init_module_imports = true
remove_duplicate_keys = true
remove_unused_variables = true
